add: script for running cluster